crates/ruff_python_parser/tests/snapshots/valid_syntax@del_targets_terminator.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/del_targets_terminator.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..29,
        body: Suite {
            range: 0..29,
            node_index: NodeIndex(None),
            statements: [
                Delete(
                    StmtDelete {
                        node_index: NodeIndex(None),
                        range: 0..8,
                        targets: [
                            Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 4..5,
                                    id: Name("a"),
                                    ctx: Del,
                                },
                            ),
                            Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 7..8,
                                    id: Name("b"),
                                    ctx: Del,
                                },
                            ),
                        ],
                    },
                ),
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 10..14,
                        value: Tuple(
                            ExprTuple {
                                node_index: NodeIndex(None),
                                range: 10..14,
                                elts: [
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 10..11,
                                            id: Name("c"),
                                            ctx: Load,
                                        },
                                    ),
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 13..14,
                                            id: Name("d"),
                                            ctx: Load,
                                        },
                                    ),
                                ],
                                ctx: Load,
                                parenthesized: false,
                            },
                        ),
                    },
                ),
                Delete(
                    StmtDelete {
                        node_index: NodeIndex(None),
                        range: 15..23,
                        targets: [
                            Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 19..20,
                                    id: Name("a"),
                                    ctx: Del,
                                },
                            ),
                            Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 22..23,
                                    id: Name("b"),
                                    ctx: Del,
                                },
                            ),
                        ],
                    },
                ),
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 24..28,
                        value: Tuple(
                            ExprTuple {
                                node_index: NodeIndex(None),
                                range: 24..28,
                                elts: [
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 24..25,
                                            id: Name("c"),
                                            ctx: Load,
                                        },
                                    ),
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 27..28,
                                            id: Name("d"),
                                            ctx: Load,
                                        },
                                    ),
                                ],
                                ctx: Load,
                                parenthesized: false,
                            },
                        ),
                    },
                ),
            ],
        },
    },
)
```
