crates/ruff_python_parser/tests/snapshots/valid_syntax@dotted_name_normalized_spaces.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/dotted_name_normalized_spaces.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..32,
        body: [
            Import(
                StmtImport {
                    node_index: NodeIndex(None),
                    range: 0..12,
                    names: [
                        Alias {
                            end: 12,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("a.b.c"),
                                range: 7..12,
                                node_index: NodeIndex(None),
                                parameter_node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                    ],
                    is_lazy: false,
                },
            ),
            Import(
                StmtImport {
                    node_index: NodeIndex(None),
                    range: 13..31,
                    names: [
                        Alias {
                            end: 31,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("a.b.c"),
                                range: 20..31,
                                node_index: NodeIndex(None),
                                parameter_node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                    ],
                    is_lazy: false,
                },
            ),
        ],
    },
)
```
