crates/ruff_python_parser/tests/snapshots/valid_syntax@except_star_py311.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/except_star_py311.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..77,
        body: [
            Try(
                StmtTry {
                    node_index: NodeIndex(None),
                    range: 44..76,
                    inner: StmtTryInner {
                        body: [
                            Expr(
                                StmtExpr {
                                    node_index: NodeIndex(None),
                                    range: 49..52,
                                    value: EllipsisLiteral(
                                        ExprEllipsisLiteral {
                                            node_index: NodeIndex(None),
                                            range: 49..52,
                                        },
                                    ),
                                },
                            ),
                        ],
                        handlers: [
                            ExceptHandler(
                                ExceptHandlerExceptHandler {
                                    range: 53..76,
                                    node_index: NodeIndex(None),
                                    type_: Some(
                                        Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 61..71,
                                                id: Name("ValueError"),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                    name: None,
                                    body: [
                                        Expr(
                                            StmtExpr {
                                                node_index: NodeIndex(None),
                                                range: 73..76,
                                                value: EllipsisLiteral(
                                                    ExprEllipsisLiteral {
                                                        node_index: NodeIndex(None),
                                                        range: 73..76,
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                },
                            ),
                        ],
                        orelse: [],
                        finalbody: [],
                        is_star: true,
                    },
                },
            ),
        ],
    },
)
```
